--- a/package.json
+++ b/package.json
@@ -92,7 +92,8 @@
     ],
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/.erb/mocks/fileMock.js",
-      "\\.(css|less|sass|scss)$": "identity-obj-proxy"
+      "\\.(css|less|sass|scss)$": "identity-obj-proxy",
+      "@mui/styled-engine": "@mui/styled-engine-sc"
     },
     "setupFiles": [
       "./.erb/scripts/check-build-exists.ts"
